SAR Blai Sandbox/src/objects/Oportunidad_platform__c.object
<CustomObject>
    <fields>
        <fullName>Apellido_Avalista__c</fullName>
        <label>Apellido Avalista</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apellido_representante_legal_Cond__c</fullName>
        <formula>if( Representate_legagal__c=true,   Apellido_representante_legal__c, &quot;..............&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Apellido representante legal Cond</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apellido_representante_legal__c</fullName>
        <label>Apellido representante legal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Atencion_sanitaria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Atención sanitaria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Autorizacion_judicial_de_internamiento__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mediante auto de autorización judical de internamiento</inlineHelpText>
        <label>Autorización judicial de internamiento</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIF_Sociedad__c</fullName>
        <formula>Centro2__r.Sociedad__r.CIF_NIF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CIF Sociedad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calcular_Descuento__c</fullName>
        <formula>IF(AND(ISNULL( Precio_Ofertado__c ),ISNULL(Descuento_Ofertado__c)) == true , Descuento__c, IF(ISNULL(Descuento_Ofertado__c) == false, Descuento_Ofertado__c, 
IF(ISNULL( Precio_Ofertado__c ) == false, ((Precio_Ofertado__c / Precio__c )*100), null) ) )</formula>
        <label>Calcular Descuento</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Calle_Avalista__c</fullName>
        <label>Calle Avalista</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calle_Centro__c</fullName>
        <formula>Centro2__r.Calle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calle Centro</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calle_Contacto__c</fullName>
        <formula>Persona_de_Contacto__r.Calle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calle Contacto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calle_Pagador__c</fullName>
        <formula>Pagador__r.Calle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calle Pagador</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calle_Residente__c</fullName>
        <formula>Residente__r.Calle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calle Residente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calle_Sociedad__c</fullName>
        <formula>Centro2__r.Sociedad__r.Calle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calle Sociedad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calle_representate_legal_Cond__c</fullName>
        <formula>if( Representate_legagal__c=true,   Calle_representate_legal__c , &quot;..............&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calle representate legal Cond</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calle_representate_legal__c</fullName>
        <label>Calle representate legal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campana__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Campo obligatorio si Procedencia=Medios de comunicación o Jornadas</inlineHelpText>
        <label>Campaña</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>NOC__c.Estado_Campana__c</field>
                <operation>equals</operation>
                <value>Abierta, Cerrada</value>
            </filterItems>
            <filterItems>
                <field>NOC__c.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QBcgAAG</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>NOC__c</referenceTo>
        <relationshipLabel>Oportunidades (Campaña)</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campo_prueba__c</fullName>
        <formula>Centro2__r.Activo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campo prueba</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Canal__c</fullName>
        <label>Canal</label>
        <picklist>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institución</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Llamada al centro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Llamada desde el centro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Llamada emitida del CAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Llamada recibida al CAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registro vía Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visita espontánea</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Central__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Central</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Centro</value>
            </filterItems>
            <filterItems>
                <field>Account.Division__c</field>
                <operation>equals</operation>
                <value>Domiciliaria</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oportunidades (Central)</relationshipLabel>
        <relationshipName>Oportunidades9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Centro2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Centro</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND (3 OR 4 OR 5 OR 6 OR 7 OR 8 OR 9)</booleanFilter>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QAeAAAW</value>
            </filterItems>
            <filterItems>
                <field>Account.Activo__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Director_del_centro__r.Id</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Account.ATC_Centro__r.Id</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Account.ATC_Zona__r.Id</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <filterItems>
                <field>$User.ProfileId</field>
                <operation>equals</operation>
                <value>00eb0000000dTH7AAM,00eb0000000dTHC,00eb0000000dTHH,00eb0000000zplj</value>
            </filterItems>
            <filterItems>
                <field>Account.Recepcionista__r.Id</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Account.ATC_Centro2__r.Id</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Account.ATC_Centro3__r.Id</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oportunidades (Centro)</relationshipLabel>
        <relationshipName>Oportunidades3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Centro__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Campo obligatorio si Procedencia=Centro Sarquavitae</inlineHelpText>
        <label>Centro de procedencia</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QAeAAAW</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oportunidades (Centro de procedencia)</relationshipLabel>
        <relationshipName>Oportunidades2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Centro_devuelto__c</fullName>
        <label>Centro devuelto</label>
        <picklist>
            <picklistValues>
                <fullName>-</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ciudad_Avalista__c</fullName>
        <label>Ciudad Avalista</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_Centro__c</fullName>
        <formula>Centro2__r.Ciudad__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ciudad Centro</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_Contacto__c</fullName>
        <formula>Persona_de_Contacto__r.Ciudad__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ciudad Contacto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_Pagador__c</fullName>
        <formula>Pagador__r.Ciudad__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ciudad Pagador</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_Sociedad__c</fullName>
        <formula>Centro2__r.Sociedad__r.Ciudad__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ciudad Sociedad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_representante_legal_Cond__c</fullName>
        <formula>if( Representate_legagal__c=true,   Ciudad_representante_legal__c , &quot;..............&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ciudad representante legal Cond</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ciudad_representante_legal__c</fullName>
        <label>Ciudad representante legal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cliente_Recomendador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Campo opcional si Procedencia = Cliente</inlineHelpText>
        <label>Cliente Recomendador</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QAe0AAG</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oportunidades (Cliente Recomendador)</relationshipLabel>
        <relationshipName>Oportunidades7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cliente_Residente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente Residente</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Cliente/Familiar</value>
            </filterItems>
            <filterItems>
                <field>Account.Residente__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Exitus__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Source.Etapa__c</field>
                <operation>equals</operation>
                <value>Ingreso, No ingreso</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oportunidades (Cliente Residente)</relationshipLabel>
        <relationshipName>OportunidadesSUIP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codigo_Postal_Avalista__c</fullName>
        <label>Código Postal Avalista</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_Postal_Centro__c</fullName>
        <formula>Centro2__r.Codigo_postal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codigo Postal Centro</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_Postal_Cond__c</fullName>
        <formula>if( Representate_legagal__c=true,  Codigo_postal_representante_legal__c , &quot;..............&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codigo Postal Cond</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_Postal_Sociedad__c</fullName>
        <formula>Centro2__r.Sociedad__r.Codigo_postal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codigo Postal Sociedad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codigo_postal_representante_legal__c</fullName>
        <label>Código postal representante legal</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compania_telef__c</fullName>
        <label>Compañia telefónica</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concierto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Concierto</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QCSgAAO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oportunidades (Concierto)</relationshipLabel>
        <relationshipName>Oportunidades6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contacto_Recomendador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contacto Recomendador</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Empresa_recomendadora__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Empresa_Recomendadora__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oportunidades (Contacto Recomendador)</relationshipLabel>
        <relationshipName>Oportunidades5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contar_oportunidad__c</fullName>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contar oportunidad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contrato_Firmado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo que indica si el contrato ha sido impreso y firmado por el sistema</description>
        <label>Contrato Firmado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cuenta_Pagador__c</fullName>
        <formula>Pagador__r.FirstName &amp; &quot; &quot; &amp;  Pagador__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cuenta Pagador</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNI_Avalista__c</fullName>
        <label>DNI Avalista</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNI_Contacto__c</fullName>
        <formula>Persona_de_Contacto__r.CIF_NIF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNI Contacto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNI_Director__c</fullName>
        <formula>Centro2__r.NIF_director_centro__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNI Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNI_Pagador__c</fullName>
        <formula>Pagador__r.CIF_NIF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNI Pagador</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNI_Residente__c</fullName>
        <formula>Residente__r.CIF_NIF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNI Residente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNI_representante_legal_Cond__c</fullName>
        <formula>if( Representate_legagal__c=true,   DNI_representante_legal__c , &quot;..............&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DNI representante legal Cond</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNI_representante_legal__c</fullName>
        <label>DNI representante legal</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dataloader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Control registros carga inicial con el Dataloader</description>
        <label>Dataloader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Descripcion__c</fullName>
        <label>Descripción</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Descripcion_plus__c</fullName>
        <inlineHelpText>Campo obligatorio si se selecciona Plus</inlineHelpText>
        <label>Descripción plus</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Descripcion_procedencia__c</fullName>
        <label>Descripción procedencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descuento_Campa_a__c</fullName>
        <label>Descuento Campaña</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Descuento_Convenio__c</fullName>
        <label>Descuento Convenio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Descuento_Ofertado__c</fullName>
        <label>Descuento Ofertado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Descuento__c</fullName>
        <label>Descuento NOC</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Descuento_colgante__c</fullName>
        <label>Descuento colgante</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Descuento_ofertado_adorea__c</fullName>
        <label>Descuento ofertado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Destino__c</fullName>
        <label>Destino</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detalle_medios_de_comunicacion__c</fullName>
        <label>Detalle medios de comunicación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_Centro_First__c</fullName>
        <formula>Centro2__r.Director_del_centro__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Director Centro First</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_Centro_Last__c</fullName>
        <formula>Centro2__r.Director_del_centro__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Director Centro Last</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doc_Gui__c</fullName>
        <label>Doc Gui</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documento_de_identidad__c</fullName>
        <formula>Residente__r.CIF_NIF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Documento de identidad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Empleado_Recomendador__c</fullName>
        <inlineHelpText>Campo obligatorio si Procedencia= Personal Sarquavitae</inlineHelpText>
        <label>Empleado Recomendador</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Empresa_Recomendadora__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Campo obligatorio si Procedencia=Prescriptor o Colectivo</inlineHelpText>
        <label>Entidad Recomendadora</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QAd7AAG</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oportunidades (Entidad Recomendadora)</relationshipLabel>
        <relationshipName>Oportunidades8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enviado_a_signar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indica si el PDF del contrato a sido enviado a ViDSigner</description>
        <label>Enviado a signar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estado_Civil__c</fullName>
        <formula>TEXT(Residente__r.Estado_Civil__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estado Civil</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado__c</fullName>
        <label>Estado</label>
        <picklist>
            <picklistValues>
                <fullName>Sin iniciar actividad</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Activa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rechazada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baja</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estado_cognitivo__c</fullName>
        <label>Estado cognitivo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estado_fisico__c</fullName>
        <label>Estado físico</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estancia__c</fullName>
        <formula>TEXT(Servicio__r.Tipo_Servicio__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estancia</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Etapa__c</fullName>
        <label>Etapa</label>
        <picklist>
            <picklistValues>
                <fullName>Información / Visita</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pendiente visita</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Visita Planificada / Espontánea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentado Plan Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reserva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preingreso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ingreso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No ingreso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abierta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negociación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stand-by</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cerrada ganada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cerrada perdida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cerrada por el sistema</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>F1__c</fullName>
        <formula>if(Nombre_propio_y_plena_capacidad_de__c=true, IMAGE(&quot;/servlet/servlet.ImageServer?id=015b0000001Rg3L&amp;oid=00D1100000C0aak&amp;lastMod=1415637431000&quot;, &quot;X&quot; , 15,15 ), IMAGE(&apos;/servlet/servlet.ImageServer?id=015b0000001Rg3Q&amp;oid=00D1100000C0aak&amp;lastMod=1415637462000&apos;, &apos; No va  &apos;,14,14))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>F1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F2__c</fullName>
        <formula>if(Autorizacion_judicial_de_internamiento__c=true, IMAGE(&quot;/servlet/servlet.ImageServer?id=015b0000001Rg3L&amp;oid=00D1100000C0aak&amp;lastMod=1415637431000&quot;, &quot;X&quot; , 15,15 ), IMAGE(&apos;/servlet/servlet.ImageServer?id=015b0000001Rg3Q&amp;oid=00D1100000C0aak&amp;lastMod=1415637462000&apos;, &apos; No va  &apos;,14,14))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>F2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F3__c</fullName>
        <formula>if(Representate_legagal__c=true, IMAGE(&quot;/servlet/servlet.ImageServer?id=015b0000001Rg3L&amp;oid=00D1100000C0aak&amp;lastMod=1415637431000&quot;, &quot;X&quot; , 15,15 ), IMAGE(&apos;/servlet/servlet.ImageServer?id=015b0000001Rg3Q&amp;oid=00D1100000C0aak&amp;lastMod=1415637462000&apos;, &apos; No va &apos;,14,14))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>F3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_Activa_Rechazada__c</fullName>
        <label>Fecha Activa/Rechazada</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Baja__c</fullName>
        <label>Fecha Baja</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Plan_Personal__c</fullName>
        <label>Fecha Plan Personal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Respuesta_Navision__c</fullName>
        <label>Fecha Respuesta Navision</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fecha_cierre_Ingreso__c</fullName>
        <label>Fecha cierre Ingreso</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_cierre_No_Ingreso__c</fullName>
        <inlineHelpText>Campo obligatorio en Etapa= &apos;No ingreso&apos;</inlineHelpText>
        <label>Fecha cierre No Ingreso</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_cierre__c</fullName>
        <label>Fecha cierre</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_Alta__c</fullName>
        <label>Fecha de Alta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_de_cierre_No_entrada__c</fullName>
        <label>Fecha de cierre No entrada</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_envio_contrato__c</fullName>
        <label>Fecha envío contrato</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_finalizacion__c</fullName>
        <inlineHelpText>Residencial: Campo obligatorio si el tipo de estancia es &apos;Temporal&apos;</inlineHelpText>
        <label>Fecha finalización</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_prevista_de_entrada__c</fullName>
        <label>Fecha prevista de entrada</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_prevista_de_ingreso__c</fullName>
        <inlineHelpText>Campo obligatorio en Etapa= &apos;Preingreso&apos;</inlineHelpText>
        <label>Fecha prevista de ingreso</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_primer_contacto__c</fullName>
        <label>Fecha primer contacto</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_real_de_entrada__c</fullName>
        <label>Fecha real de entrada</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_real_de_ingreso__c</fullName>
        <label>Fecha real de ingreso</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_solicitud__c</fullName>
        <label>Fecha solicitud</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forma_de_pago_Dispositivo__c</fullName>
        <label>Forma de pago Dispositivo</label>
        <picklist>
            <picklistValues>
                <fullName>Efectivo / transferencia bancaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recibo domiciliado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraccionado</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Forma_de_pago_Servicio__c</fullName>
        <label>Forma de pago Servicio</label>
        <picklist>
            <picklistValues>
                <fullName>Recibo domiciliado</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Forma_de_pago__c</fullName>
        <label>Forma de pago</label>
        <picklist>
            <picklistValues>
                <fullName>Efectivo / Transferencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recibo domiciliado</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frecuencia_CD__c</fullName>
        <label>Frecuencia CD</label>
        <picklist>
            <picklistValues>
                <fullName>Lunes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Martes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miércoles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jueves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viernes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sabado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domingo</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>